[package]
name = "pnet-futures"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2018"

[dependencies]
pnet = { git = "https://github.com/jgall/libpnet", branch = "optional_sys_calls" }
futures = "0.1.25"
tokio-codec = "0.1.1"
tokio-io = "0.1.10"
tokio-reactor =  "0.1.6"
mio = "0.6.14"